# sous-chef

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  alembic.ini  dashboardxphoneix.md  docker-compose.yml  eval_thresholds.yaml  pyproject.toml  railway.toml  switch llm.md  todo.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_catalog.py  0003_embeddings.py
app/: config.py  main.py
app/agent/: loop.py  tools.py
app/api/: admin_deps.py  deps.py  health.py
app/api/admin/: __init__.py  corpus.py  evals.py  metrics.py
app/api/user/: __init__.py  chat.py  favorites.py  profile.py  recipes.py
app/classifier/: model_card.md  predict.py
app/core/: errors.py  logging.py  redaction.py
app/guardrails/: decision.py  input_rails.py  output_rails.py
app/infra/: cache.py  db.py  embeddings.py  llm_groq.py  tracing.py  vault.py
app/infra/llm/: __init__.py  base.py  factory.py  groq.py  openai.py
app/models/: __init__.py  base.py  profile.py  recipe.py
app/repo/: favorites.py  profiles.py  recipes.py  seen_history.py
app/schemas/: admin.py  chat.py  favorite.py  profile.py  recipe.py  tools.py
app/services/admin/: corpus.py  evals.py  metrics.py  traces.py
app/services/shared/: recipe_view.py  substitutions_data.py
app/services/user/: constraint_guard.py  favorites.py  freshness.py  meal_plan.py  nutrition.py  rag.py  router.py  shopping_list.py  substitution.py  workflow.py
dashboard/: Dockerfile  Dockerfile.dockerignore  app.py  auth.py
dashboard/pages/: 1_corpus.py  2_evals.py  3_metrics.py
docker/pgadmin/: servers.json
docs/: DECISIONS.md  DESIGN.md  EVALS.md  RUNBOOK.md  SECURITY.md
evals/: run_evals.py
evals/agent_tool_selection/: cases.yaml
evals/classifier/: testset.csv
evals/rag/: golden.yaml
evals/redteam/: attempts.yaml
ingestion/: allergens.py  categorize.py  coverage.py  embed_recipes.py  extract_ingredients.py  fetch_kaggle.py  fetch_thecocktaildb.py  fetch_themealdb.py  ingredient_nutrition_data.py  load.py  nutrition.py  run_ingest.py
ingestion/data/: README.md
ml/: train_classifier.py
ml/artifacts/: model.joblib
ml/data/: intents_labeled.csv
projectplanFolderForMd/: amer_idea-1-tech.md  amer_idea-1.md  dependencies.md  how_to_use_embeeding.md  model_role.md  project_init.md  sous-chef-spec-plan.md  structure.md  structure_build_commands.md
prompts/: agent_system.md  rag_judge.md  recipe_explainer.md  router_system.md  substitution.md
railway/: README.md  dashboard.toml  phoenix.toml  vault.toml  widget.toml
scripts/: backfill_nutrition.py  dashboard_smoke.py  export_seed_corpus.py  init_phoenix_schema.sql  load_seed_corpus.py  measure_eval_tokens.py  recompute_seed_diet_flags.py  seed_vault.sh  widget_smoke.py
seeds/corpus/: README.md  embeddings.npy  manifest.json
specs/001-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-foundation/checklists/: requirements.md
specs/001-foundation/contracts/: health.openapi.yaml
specs/002-catalog-wall-favorites/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-catalog-wall-favorites/checklists/: requirements.md
specs/002-catalog-wall-favorites/contracts/: favorites.openapi.yaml  profile.openapi.yaml  recipes.openapi.yaml
specs/003-intelligent-behavior/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-intelligent-behavior/checklists/: requirements.md
specs/003-intelligent-behavior/contracts/: agent_tools.md  chat.openapi.yaml  classifier.md
specs/004-evals-and-uis/: checks.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-evals-and-uis/checklists/: requirements.md
specs/004-evals-and-uis/contracts/: admin.openapi.yaml  ui-contracts.md
specs/005-pgadmin-and-openai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pgadmin-and-openai/checklists/: requirements.md
specs/005-pgadmin-and-openai/contracts/: llm_client.md
specs/006-corpus-data-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-corpus-data-quality/checklists/: requirements.md
specs/006-corpus-data-quality/contracts/: recipe-surface.md
specs/007-ship-public-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ship-public-deploy/checklists/: requirements.md
specs/007-ship-public-deploy/contracts/: ci-gate.md  deployment-topology.md  secrets-keyspace.md  seed-corpus.md
tests/: conftest.py
tests/contract/: test_llm_client.py
tests/integration/: conftest.py  test_admin.py  test_chat_flow.py  test_favorites.py  test_health_smoke.py  test_recipes_flow.py  test_wall_regression.py
tests/redteam/: test_attempts.py
tests/unit/: test_constraint_guard.py  test_eval_metric_json.py  test_food_com_nutrition.py  test_foodcom_parsing.py  test_freshness.py  test_guardrails.py  test_image_placeholders.py  test_ingestion_allergens.py  test_llm_span.py  test_meal_plan.py  test_nutrition_fallback.py  test_nutrition_scaling.py  test_rag.py  test_redaction.py  test_shopping_list.py  test_substitution.py  test_tracing_config.py  test_vault.py
widget/: .dockerignore  Dockerfile  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
widget/src/: App.jsx  main.jsx  styles.css
widget/src/api/: client.js
widget/src/components/: CategoryChips.jsx  ChatBox.jsx  ConstraintsForm.jsx  Favorites.jsx  MealPlanView.jsx  RecipeCard.jsx  RecipeDetail.jsx  RefusalNotice.jsx  ShoppingList.jsx  SubstitutionCard.jsx
widget/src/lib/: categories.js  images.js  profile.js
