[project]
name = "sous-chef"
version = "0.1.0"
description = "SousChef — AI recipe-discovery assistant (FastAPI monolith)"
requires-python = ">=3.11"

# Shared base — the small set EVERY Python surface imports (config/schemas/HTTP/logging).
dependencies = [
  "pydantic",
  "pydantic-settings",
  "httpx",
  "structlog",
]

[project.optional-dependencies]
# ── BACKEND IMAGE (the FastAPI monolith) ──────────────────────────────────────
# Foundation phase keeps this to the lean set the skeleton actually boots with.
# Later phases add their own libs via `uv add --optional backend <pkg>`. No torch — ever.
backend = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",                 # Postgres driver
  "pgvector",                        # vector column + search
  "redis",                           # cache / session memory
  "hvac",                            # Vault secrets adapter
  "opentelemetry-sdk",               # tracing
  "openinference-instrumentation",
  "arize-phoenix-otel",              # exporter to the Phoenix service (NOT the Phoenix server)
  "presidio-analyzer",               # PII detection (wired in a later phase)
  "presidio-anonymizer",             # PII redaction (wired in a later phase)
  # ── 003-intelligent-behavior: serving deps for the turn pipeline (no torch) ──
  "groq>=1.4.0",                     # LLM chat + native tool calling (Groq is chat-only)
  "openai>=2.41.0",                  # OpenAI-compatible embeddings client (separate hosted provider)
  "scikit-learn>=1.9.0",             # serve the offline-trained intent classifier
  "joblib>=1.5.3",                   # load model.joblib (classifier artifact)
  "slowapi>=0.1.9",                  # per-profile rate limiting on /chat
  # NOTE: the input/output guardrails are implemented as DETERMINISTIC regex rails
  # (app/guardrails/*.py) — deliberately, so the red-team gate is provable/reproducible (research §11).
  # NeMo Guardrails was dropped from the serving image: it is unused in app/ and pulled a C++ build
  # dependency (annoy) that broke the lean slim image (golden rule #3). Re-add behind a builder stage
  # only if a model-backed rail is ever actually imported.
]

# ── DASHBOARD IMAGE (the Streamlit operator console) ──────────────────────────
# Its own image, never mixed into the backend (golden rule #3 — keep images lean).
# UI deps only (FR-030): cookie login + an HTTP client for the /admin/* API + table rendering.
dashboard = [
  "streamlit",                       # operator console (corpus / evals / metrics)
  "streamlit-authenticator",         # cookie login that survives refresh (creds + key from Vault)
  "httpx",                           # calls the backend /admin/* API (admin token from Vault)
  "pandas",                          # tabular rendering for corpus/eval/metric views
]

[dependency-groups]
# These NEVER ship in a serving image — local/CI/job only.
dev  = ["ruff", "mypy"]
# CI eval gates (classifier macro-F1, RAG hit@k, red-team refusal). Never shipped.
evals = [
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.9.0",
]
# Offline corpus pipeline only (TheMealDB/TheCocktailDB/Kaggle → categorize → embed). Never shipped.
# httpx for the source/OFF calls comes from the shared base; pandas subsets the Kaggle CSV.
ingestion = [
    "openai>=2.41.0",
    "pandas>=3.0.3",
]
# Offline intent-classifier training (TF-IDF + logistic regression → model.joblib). Never shipped.
ml = [
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
test = ["pytest", "pytest-asyncio", "httpx"]

[tool.uv]
default-groups = ["dev"]   # local `uv sync` includes dev tools; images pass --no-dev to skip them

# ── Tooling ───────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "alembic"]

[tool.ruff.lint]
# A sensible, not-overbearing baseline for the app package.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import ordering)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert-heavy patterns and reimport fixtures freely.
"tests/**" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
files = ["app"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
# Pragmatic strictness for a skeleton: require typed signatures in our own code,
# but don't fail on the many external libs that ship without stubs yet.
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Alembic migration scripts are generated/templated; don't hold them to app strictness.
module = ["alembic.*"]
disallow_untyped_defs = false
